--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,6 @@
 
 /*改写bootstrap -- end*/
 
-
 .pad-show, .phone-show{
 	display: none;
 }
@@ -1476,4 +1475,14 @@ form.message{
 
 .beian img{
 	width: 20px;
+}
+
+.phone-pic{
+	width: 100%;
+	height: 130px;
+}
+
+.phone-pic img{
+	width: 80px;
+	margin-left: 30px;
 }
